fix: .secret 클래스의 letter-spacing 값을 -1px로 수정

--- a/src/features/preview/ui/preview.css
+++ b/src/features/preview/ui/preview.css
@@ -45,6 +45,5 @@
   letter-spacing: 2.24px;
 }
 .secret {
-  letter-spacing: 2px;
-  /* TODO : claire -1px로 변경 */
+  letter-spacing: -1px;
 }
